--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body {
 }
 
 header{
-  font-family: 'Shantell Sans', cursive;
+  font-family: 'Shantell Sans', 'Arial', cursive;
   font-weight: bold;
 }
 
